grammar.js
    class_definition: $ => seq(
      $.class_directive,
      $.super_directive,
      optional($.source_directive),
      repeat($.implements_directive),
      repeat(choice(
        $.annotation_directive,
        $.method_definition,
        $.field_definition,
      )),
    ),

    // class related
    class_directive: $ => seq(
      '.class',
      optional($.access_modifiers),
      $.class_identifier,
    ),
    super_directive: $ => seq('.super', $.class_identifier),
    source_directive: $ => seq('.source', $.string),
    implements_directive: $ => seq('.implements', $.class_identifier),

    identifier: _ => /<?[a-zA-Z_$][a-zA-Z0-9_\-$]*>?/,
    // class_identifier: _ => token(/L[^;]+;/),
    class_identifier: $ => seq(
      alias($.L, 'L'),
      // repeat1(seq(alias($._class_ident, $.identifier), '/')),
      // alias($._class_ident, $.identifier),
      sep1(alias($._class_ident, $.identifier), '/'),
      ';',
    ),

    // exclude :[SVIJFBZC]
    access_modifiers: $ => repeat1($.access_modifier),

    access_modifier: _ => choice(...access_flags.concat(restriction_flags)),

    // special builtins
    string: $ => seq(
      '"',
      repeat(choice(
        $.string_fragment,
        $._escape_sequence,
      )),
      '"',
    ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token_ constructs containing a regexp
    // so as to obtain a node in the CST.
    string_fragment: _ => token.immediate(prec(1, /[^"\\]+/)),

    _escape_sequence: $ => choice(
      prec(2, token.immediate(seq('\\', /[^abfnrtvxu'\"\\\?]/))),
      prec(1, $.escape_sequence),
    ),
